[Alphametrica] Added Roboto Bold Font and Completed Main Screen

--- a/Alphametrica/Alphametrica/Base.lproj/Main.storyboard
+++ b/Alphametrica/Alphametrica/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stay on the top of your finance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LjN-RG-aLi">
-                                <rect key="frame" x="34.5" y="334" width="317" height="28"/>
+                                <rect key="frame" x="34.5" y="334" width="312" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="X0p-L8-mha"/>
                                 </constraints>
@@ -49,13 +49,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAR-8W-TKE">
-                                <rect key="frame" x="105" y="408" width="661.5" height="16.5"/>
+                                <rect key="frame" x="105" y="408" width="661.5" height="18"/>
                                 <fontDescription key="fontDescription" name="Merriweather-Regular" family="Merriweather" pointSize="14"/>
                                 <color key="textColor" red="0.71764705882352942" green="0.71764705882352942" blue="0.71764705882352942" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nTm-jK-9gh">
-                                <rect key="frame" x="0.0" y="566" width="414" height="90"/>
+                                <rect key="frame" x="0.0" y="567" width="414" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="NUP-SR-Pzn"/>
                                 </constraints>
@@ -78,12 +78,14 @@
                             <constraint firstItem="XCy-8O-D8R" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gaQ-nz-E0S"/>
                             <constraint firstItem="XCy-8O-D8R" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="99" id="jhr-qN-NVC"/>
                             <constraint firstItem="iAR-8W-TKE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="352.5" id="moX-Yr-8gj"/>
-                            <constraint firstItem="LjN-RG-aLi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="34.700000000000003" id="z0F-0K-Rhj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LjN-RG-aLi" secondAttribute="trailing" constant="67.530000000000001" id="qL6-MW-8ec"/>
+                            <constraint firstItem="LjN-RG-aLi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="34.469999999999999" id="z0F-0K-Rhj"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
                         <outlet property="firstLabel" destination="LjN-RG-aLi" id="NkT-Up-6EH"/>
+                        <outlet property="secondLabel" destination="iAR-8W-TKE" id="ati-re-m8t"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
