--- a/Alphametrica/Alphametrica/BottomBarStoryboard.storyboard
+++ b/Alphametrica/Alphametrica/BottomBarStoryboard.storyboard
@@ -35,11 +35,14 @@
                                         <state key="normal" title="가입하기">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onMainButtonClick:" destination="4q8-TT-odU" eventType="touchUpInside" id="IEL-bC-Mat"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그인" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWU-52-jdZ">
-                                        <rect key="frame" x="184.5" y="71" width="45" height="19"/>
-                                        <fontDescription key="fontDescription" name=".AppleSDGothicNeoI-Regular" family=".AppleKoreanFont" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="186" y="71" width="42" height="19"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                                        <color key="textColor" red="0.89791398200000005" green="0.25620727859999998" blue="0.19937060979999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -69,6 +72,7 @@
                     <size key="freeformSize" width="414" height="90"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fja-II-N9u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="4q8-TT-odU" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="189.85507246376812" y="152.67857142857142"/>
         </scene>
