--- a/Alphametrica/Alphametrica/Base.lproj/Main.storyboard
+++ b/Alphametrica/Alphametrica/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LFm-40-hb8">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -82,6 +82,7 @@
                             <constraint firstItem="LjN-RG-aLi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="34.469999999999999" id="z0F-0K-Rhj"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="1Mw-o0-iXQ"/>
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
                         <outlet property="firstLabel" destination="LjN-RG-aLi" id="NkT-Up-6EH"/>
@@ -90,7 +91,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-214" y="77"/>
+            <point key="canvasLocation" x="695.6521739130435" y="76.339285714285708"/>
         </scene>
         <!--BottomBarStoryboard-->
         <scene sceneID="ONQ-aJ-Qfv">
@@ -100,7 +101,25 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0W-Lz-D0G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="365" y="338"/>
+            <point key="canvasLocation" x="1394" y="76"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QxX-EL-eAa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LFm-40-hb8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" id="VEE-BF-HuO">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="eZP-2x-WUc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mym-fK-2B5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-214.49275362318843" y="76.339285714285708"/>
         </scene>
     </scenes>
     <resources>
