[Alphametrica] Completed GUI of Signup Screen and Login Screen

--- a/Alphametrica/Alphametrica/SignupStoryboard.storyboard
+++ b/Alphametrica/Alphametrica/SignupStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K3B-dq-Dew">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -41,7 +41,7 @@
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="27" id="NuN-8j-zO9"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="23"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.039215686270000001" green="0.039215686270000001" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0Vb-U3-E0c">
@@ -50,14 +50,17 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="456" id="rK3-4s-kl7"/>
                                                 </constraints>
+                                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </tableView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AeJ-xQ-0cG">
-                                                <rect key="frame" x="87" y="726" width="240" height="55"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eB6-c4-Smk">
+                                                <rect key="frame" x="41" y="726" width="333" height="55"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="55" id="VSr-24-LuV"/>
+                                                    <constraint firstAttribute="height" constant="55" id="5eL-Vj-IZA"/>
                                                 </constraints>
-                                            </view>
+                                                <connections>
+                                                    <segue destination="kAM-DM-xk5" kind="embed" id="nMa-Sa-FvM"/>
+                                                </connections>
+                                            </containerView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVf-wE-N0M">
                                                 <rect key="frame" x="102" y="848" width="210" height="20"/>
                                                 <subviews>
@@ -104,23 +107,23 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="eB6-c4-Smk" secondAttribute="trailing" constant="40.5" id="0KQ-fz-bhk"/>
                                             <constraint firstItem="0Vb-U3-E0c" firstAttribute="centerX" secondItem="trA-Wm-ZPa" secondAttribute="centerX" id="1VJ-ci-tUF"/>
                                             <constraint firstItem="4bj-Kx-hPs" firstAttribute="top" secondItem="f9t-5h-zLc" secondAttribute="bottom" constant="34" id="2SS-aK-6kv"/>
+                                            <constraint firstItem="eB6-c4-Smk" firstAttribute="leading" secondItem="trA-Wm-ZPa" secondAttribute="leading" constant="40.5" id="4nC-3S-Ag8"/>
                                             <constraint firstItem="f9t-5h-zLc" firstAttribute="centerX" secondItem="trA-Wm-ZPa" secondAttribute="centerX" id="5ml-KD-3gS"/>
                                             <constraint firstItem="f9t-5h-zLc" firstAttribute="top" secondItem="trA-Wm-ZPa" secondAttribute="top" constant="60" id="Cqd-A9-Z0A"/>
-                                            <constraint firstItem="OVf-wE-N0M" firstAttribute="top" secondItem="AeJ-xQ-0cG" secondAttribute="bottom" constant="67" id="HF2-EF-zTp"/>
                                             <constraint firstItem="0Vb-U3-E0c" firstAttribute="leading" secondItem="trA-Wm-ZPa" secondAttribute="leading" constant="39.5" id="Kzt-dv-H2K"/>
                                             <constraint firstAttribute="trailing" secondItem="218-Uk-HPx" secondAttribute="trailing" id="OVU-QG-Ja6"/>
-                                            <constraint firstItem="AeJ-xQ-0cG" firstAttribute="top" secondItem="0Vb-U3-E0c" secondAttribute="bottom" constant="35" id="OXF-hV-di4"/>
                                             <constraint firstItem="0Vb-U3-E0c" firstAttribute="top" secondItem="4bj-Kx-hPs" secondAttribute="bottom" constant="86" id="Uwc-Lh-xbj"/>
                                             <constraint firstItem="218-Uk-HPx" firstAttribute="top" secondItem="OVf-wE-N0M" secondAttribute="bottom" constant="35" id="Vr3-nw-BeQ"/>
                                             <constraint firstAttribute="bottom" secondItem="218-Uk-HPx" secondAttribute="bottom" constant="50" id="XTz-iV-cm7"/>
                                             <constraint firstItem="OVf-wE-N0M" firstAttribute="centerX" secondItem="trA-Wm-ZPa" secondAttribute="centerX" id="aiv-RG-czu"/>
-                                            <constraint firstAttribute="trailing" secondItem="AeJ-xQ-0cG" secondAttribute="trailing" constant="87" id="bR3-au-LTQ"/>
-                                            <constraint firstItem="AeJ-xQ-0cG" firstAttribute="leading" secondItem="trA-Wm-ZPa" secondAttribute="leading" constant="87" id="cEw-Zj-thS"/>
+                                            <constraint firstItem="OVf-wE-N0M" firstAttribute="top" secondItem="eB6-c4-Smk" secondAttribute="bottom" constant="67" id="bp4-pj-riZ"/>
                                             <constraint firstItem="218-Uk-HPx" firstAttribute="leading" secondItem="trA-Wm-ZPa" secondAttribute="leading" id="fEl-vQ-Cc4"/>
                                             <constraint firstItem="OVf-wE-N0M" firstAttribute="leading" secondItem="trA-Wm-ZPa" secondAttribute="leading" constant="102" id="kwk-fA-xcy"/>
                                             <constraint firstItem="4bj-Kx-hPs" firstAttribute="centerX" secondItem="trA-Wm-ZPa" secondAttribute="centerX" id="qd2-Zv-WS8"/>
+                                            <constraint firstItem="eB6-c4-Smk" firstAttribute="top" secondItem="0Vb-U3-E0c" secondAttribute="bottom" constant="35" id="tsU-DE-4Ft"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -147,12 +150,22 @@
                     </view>
                     <size key="freeformSize" width="414" height="1075"/>
                     <connections>
+                        <outlet property="scrollView" destination="ClR-tn-gb9" id="gDq-wo-5L0"/>
                         <outlet property="tableView" destination="0Vb-U3-E0c" id="aBK-cs-8DG"/>
+                        <outlet property="tableViewHeightConstraint" destination="rK3-4s-kl7" id="yjr-nF-hBG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k6N-cm-psk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="385.50724637681162" y="-204.57589285714286"/>
+        </scene>
+        <!--PassValidationStoryBoard-->
+        <scene sceneID="S3O-1M-wiw">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PassValidationStoryBoard" id="kAM-DM-xk5" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cXS-za-gQk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1042" y="-47"/>
         </scene>
         <!--BottomBarStoryboard-->
         <scene sceneID="uNm-cQ-9Gg">
