--- a/Alphametrica/Alphametrica/SignupTableViewCell.xib
+++ b/Alphametrica/Alphametrica/SignupTableViewCell.xib
@@ -32,7 +32,7 @@
                         <rect key="frame" x="0.0" y="61" width="320" height="18"/>
                         <color key="textColor" red="0.71764705882352942" green="0.71764705882352942" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                     </textField>
                 </subviews>
                 <constraints>
@@ -44,6 +44,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="textField" destination="vQn-tO-cfz" id="RvZ-1e-RRb"/>
+                <outlet property="titleLabel" destination="3g4-Ey-9Rh" id="YtH-Wl-gwm"/>
+            </connections>
             <point key="canvasLocation" x="-4.3478260869565224" y="39.84375"/>
         </tableViewCell>
     </objects>
