--- a/Alphametrica/Alphametrica/Views/Storyboards/SignupStoryboard.storyboard
+++ b/Alphametrica/Alphametrica/Views/Storyboards/SignupStoryboard.storyboard
@@ -51,6 +51,10 @@
                                                     <constraint firstAttribute="height" constant="456" id="rK3-4s-kl7"/>
                                                 </constraints>
                                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="K3B-dq-Dew" id="XCw-cr-2ZE"/>
+                                                    <outlet property="delegate" destination="K3B-dq-Dew" id="hqq-x6-dUx"/>
+                                                </connections>
                                             </tableView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eB6-c4-Smk">
                                                 <rect key="frame" x="40" y="726" width="333" height="55"/>
